Fix overlapping divs

--- a/styles/itemsdisplay.css
+++ b/styles/itemsdisplay.css
@@ -12,12 +12,14 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   border-radius: 5px;
+  
 }
 
 .categories {
     margin: 5px;
+    
 }
 
 .link-to-category {
-    float: left;
+    display:inline-block;
 }
